2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.9.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.9.

2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: Fixed build of foomatic-rip on systems without
	  D-Bus. Thanks to Richard Hughes (hughsient at gmail dot com) for
	  the quick fix.

2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.8.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.8.

2011-07-24  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: Removed stray characters from "pstoraster"
	  Ghostscript command line.

	* foomaticrip.c, pdf.c, renderer.c: Added "-dNOINTERPOLATE" to the
	  Ghostscript command lines as this makes Ghostscript rendering
	  the pages significantly faster. Use "ps2write" instead of "pswrite"
	  as PostScript output device as Ghostscript produced huge output
	  files with "pswrite" (and "pswrite" is also deprecated now).

	* foomaticrip.c: SECURITY FIX: It was possible to make CUPS executing
	  arbitrary commands as the system user "lp" when foomatic-rip was
	  used as CUPS filter. Fixed by not parsing named options (like
	  "--ppd lj.ppd") when foomatic-rip is running as CUPS filter, as
	  CUPS does not supply named options to their filters.

2011-03-04  Till Kamppeter <till.kamppeter@gmail.com>

	* configure.ac: Support for libdir in the ./configure script.

	* pdf.c: Use mkstemp() instead of mktemp(). Thanks to Richard
	  Hughes (hughsient at gmail dot com) for supplying me this patch
	  from Red Hat.

	* colord.c, colord.h, Makefile.am, configure.ac, foomaticrip.c,
	  options.c, options.h: Added support for ICC-based color managment.
	  Both colord and CUPS' ICC-related PPD extensions are supported.
	  For colord D-Bus is required. Thanks to Richard Hughes (hughsient
	  at gmail dot com) for the patch.

2011-02-21  Till Kamppeter <till.kamppeter@gmail.com>
